Add global container to layout

--- a/diaphragm/templates/layout.html
+++ b/diaphragm/templates/layout.html
@@ -3,7 +3,9 @@
 {% block title %}Title!{% endblock %}
 
 {% block body %}
-    <div class="header">HEADER</div>
-    <div class="content">CONTENT (кириллица)</div>
-    <div class="footer">FOOTER</div>
+    <div class="container">
+        <div class="header">HEADER</div>
+        <div class="content">CONTENT</div>
+        <div class="footer">FOOTER</div>
+    </div>
 {% endblock %}
