--- a/diaphragm/templates/base.html
+++ b/diaphragm/templates/base.html
@@ -4,6 +4,7 @@
 
 <head>
     <title>{% block title %}{% endblock %}</title>
+    <link rel="stylesheet" href="static/styles.css">
     <meta charset="utf-8">
 </head>
 
