--- a/diaphragm/static/styles.css
+++ b/diaphragm/static/styles.css
@@ -3,20 +3,123 @@
 }
 
 html {
+    width: 100%;
     height: 100%;
+    font-size: 1.2em;
+    font-family: 'PT Serif', serif;
+}
+
+a {
+    color: #3d5afe;
 }
 
 body {
     margin: 0;
+    width: 100%;
     height: 100%;
 }
 
 .container {
-    min-height: 100%;
+    margin: auto;
     display: flex;
+    min-height: 100%;
     flex-direction: column;
+    background-color: #f5f5f5;
+    transition-duration: 0.1s;
+}
+
+.header {
+    width: 100%;
+    height: 3.5em;
+    display: flex;
+    position: fixed;
+    padding: 0.5em 1em;
+    align-items: center;
+    flex-direction: column;
+    background-color: white;
+    transition-duration: 0.1s;
+    box-shadow: 0 1px 8px rgba(0,0,0,.3);
+}
+
+.title {
+    flex: 1;
+}
+
+.navigation div {
+    margin: 0 0 0 0.6em;
+    display: inline-block;
 }
 
 .content {
     flex: 1;
+    display: flex;
+    margin-top: 4em;
+    flex-wrap: wrap;
+    flex-direction: row;
+    align-content: flex-start;
+}
+
+.content div {
+    flex: 1;
+    padding: 1em;
+    min-width: 300px;
+    border-radius: 2px;
+    margin: 0.5em 0.3em;
+    background-color: white;
+    transition-duration: 0.1s;
+    box-shadow: 0 1px 8px rgba(0,0,0,.3);
+}
+
+.footer {
+    color: grey;
+    padding: 0.5em 1em;
+    text-align: center;
+}
+
+.footer a {
+    color: grey;
+}
+
+.footer p {
+    margin: 0.2em;
+}
+
+@media screen and (min-width: 480px) {
+    .header {
+        flex-direction: row;
+        height: 3em;
+    }
+
+    .content {
+        margin-top: 3.5em;
+    }
+}
+
+@media screen and (min-width: 900px) {
+    .container {
+        width: 900px;
+        background-color: white;
+    }
+
+    .header {
+        margin-top: 2em;
+        box-shadow: none;
+        padding: 0.5em 0;
+        position: relative;
+        border-bottom: 1px solid lightgrey;
+    }
+
+    .content {
+        margin-top: 1em;
+    }
+
+    .content div {
+        box-shadow: none;
+        background-color: white;
+    }
+
+    .footer {
+        padding: 0.5em 0;
+        text-align: right;
+    }
 }
