--- a/diaphragm/static/styles.css
+++ b/diaphragm/static/styles.css
@@ -1,5 +1,6 @@
 * {
     box-sizing: border-box;
+    transition-duration: 0.1s;
 }
 
 html {
@@ -10,7 +11,7 @@ html {
 }
 
 a {
-    color: #3d5afe;
+    color: #01579b;
 }
 
 body {
@@ -25,35 +26,101 @@ body {
     min-height: 100%;
     flex-direction: column;
     background-color: #f5f5f5;
-    transition-duration: 0.1s;
+}
+
+.cover {
+    top: -100%;
+    left: -100%;
+    right: -100%;
+    bottom: -100%;
+    position: fixed;
+}
+
+.cover-hidden {
+    z-index: -1;
+    background-color: transparent;
+}
+
+.cover-visible {
+    z-index: 100;
+    background-color: rgba(220, 220, 220, 0.8);
 }
 
 .header {
     width: 100%;
-    height: 3.5em;
+    z-index: 200;
+    height: auto;
     display: flex;
     position: fixed;
-    padding: 0.5em 1em;
     align-items: center;
     flex-direction: column;
+    justify-content: center;
+}
+
+.wrapper,
+.title,
+.menu {
+    color: inherit;
+    background-color: inherit;
+}
+
+.menu:hover,
+.navigation a:hover {
+    cursor: pointer;
+    background-color: #eee;
+}
+
+.header {
     background-color: white;
-    transition-duration: 0.1s;
-    box-shadow: 0 1px 8px rgba(0,0,0,.3);
+}
+
+.header,
+.wrapper {
+    box-shadow: 0 1px 8px rgba(0,0,0,.2);
+}
+
+.wrapper {
+    flex: 1;
+    width: 100%;
+    display: flex;
+    z-index: 9000;
+    flex-wrap: nowrap;
+    transition-duration: 0s;
 }
 
 .title {
+    padding: 0 1em;
     flex: 1;
+    height: 3em;
+    line-height: 3em;
 }
 
-.navigation div {
-    margin: 0 0 0 0.6em;
+.menu {
+    line-height: 3em;
+    width: 3em;
+    text-align: center;
+}
+
+.navigation-closed {
+    margin-top: -3em;
+}
+
+.navigation-open {
+    margin-top: 0;
+}
+
+.navigation a {
+    height: 3em;
+    line-height: 3em;
+    padding: 0 0.5em;
     display: inline-block;
+    text-decoration: none;
 }
 
 .content {
     flex: 1;
     display: flex;
-    margin-top: 4em;
+    margin-top: 3em;
     flex-wrap: wrap;
     flex-direction: row;
     align-content: flex-start;
@@ -64,10 +131,10 @@ body {
     padding: 1em;
     min-width: 300px;
     border-radius: 2px;
-    margin: 0.5em 0.3em;
+    margin: 0.3em 0em;
     background-color: white;
     transition-duration: 0.1s;
-    box-shadow: 0 1px 8px rgba(0,0,0,.3);
+    box-shadow: 0 1px 8px rgba(0,0,0,.2);
 }
 
 .footer {
@@ -80,33 +147,62 @@ body {
     color: grey;
 }
 
-.footer p {
-    margin: 0.2em;
-}
-
 @media screen and (min-width: 480px) {
     .header {
         flex-direction: row;
         height: 3em;
+        box-shadow: 0 1px 8px rgba(0,0,0,.4);
+    }
+
+    .cover-visible, .cover-hidden {
+        z-index: -1;
+        background-color: white;
+    }
+
+    .wrapper {
+        box-shadow: none;
+    }
+
+    .menu {
+        display: none;
+    }
+
+    .navigation {
+        padding: 0 1em;
+    }
+
+    .navigation-closed {
+        margin: 0px;
     }
 
     .content {
-        margin-top: 3.5em;
+        margin-top: 3em;
+    }
+
+    .content div {
+        margin: 0.5em 0.3em;
     }
 }
 
-@media screen and (min-width: 900px) {
+@media screen and (min-width: 800px) {
     .container {
-        width: 900px;
+        width: 100%;
         background-color: white;
     }
 
     .header {
-        margin-top: 2em;
         box-shadow: none;
-        padding: 0.5em 0;
         position: relative;
         border-bottom: 1px solid lightgrey;
+        background-color: transparent;
+    }
+
+    .navigation a {
+        text-decoration: underline;
+    }
+
+    .navigation a:hover {
+        background-color: transparent;
     }
 
     .content {
@@ -119,7 +215,24 @@ body {
     }
 
     .footer {
-        padding: 0.5em 0;
         text-align: right;
+    }
+}
+
+@media screen and (min-width: 900px) {
+    .container {
+        width: 900px;
+    }
+
+    .header {
+        margin-top: 2em;
+    }
+
+    .title, .navigation {
+        padding: 0;
+    }
+
+    .header .footer {
+        padding: 0.5em 0;
     }
 }
