--- a/diaphragm/templates/base.html
+++ b/diaphragm/templates/base.html
@@ -4,11 +4,11 @@
 
 <head>
     <title>{% block title %}{% endblock %}</title>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Droid+Serif">
-    <link href="https://fonts.googleapis.com/css?family=PT+Serif" rel="stylesheet">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=PT+Serif">
     <link rel="stylesheet" href="static/styles.css">
     <meta name="viewport" content="width=device-width">
     <meta charset="utf-8">
+    <script src="static/scripts.js"></script>
     {% block head %}{% endblock %}
 </head>
 
