--- a/diaphragm/templates/layout.html
+++ b/diaphragm/templates/layout.html
@@ -1,26 +1,36 @@
 {% extends "base.html" %}
 
-{% block title %}Title!{% endblock %}
+{% block title %}niemandkun's&nbsp;lair{% endblock %}
 
 {% block body %}
     <div class="container">
+
         <div class="header">
-            <div class="title">niemandkun's lair</div>
-            <div class="navigation">
-                <div><a href="blog">blog</a></div>
-                <div><a href="projects">projects</a></div>
-                <div><a href="about">about</a></div>
+            <div class="wrapper">
+                <div class="title">niemandkun's&nbsp;lair</div>
+                <div class="menu" onclick="switchNavigation()">&#8942;</div>
+            </div>
+
+            <div class="navigation navigation-closed">
+                <a href="blog">blog</a>
+                <a href="projects">projects</a>
+                <a href="about">about</a>
             </div>
         </div>
+
+        <div class="cover cover-hidden"></div>
+
         <div class="content">
             <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</div>
             <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</div>
         </div>
+
         <div class="footer">
             <p>Contact me via
                 <a href="mailto:niemandkun@yandex.ru">mail</a> or
                 <a href="https://vk.com/niemandkun">vk</a>.
             </p>
         </div>
+
     </div>
 {% endblock %}
