--- a/diaphragm/templates/base.html
+++ b/diaphragm/templates/base.html
@@ -8,7 +8,8 @@
     <link rel="stylesheet" href="static/styles.css">
     <meta name="viewport" content="width=device-width">
     <meta charset="utf-8">
-    <script src="static/scripts.js"></script>
+    <script src="static/ui.js"></script>
+    <script src="static/ajax.js"></script>
     {% block head %}{% endblock %}
 </head>
 
