--- a/diaphragm/templates/base.html
+++ b/diaphragm/templates/base.html
@@ -6,6 +6,8 @@
     <title>{% block title %}{% endblock %}</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=PT+Serif">
     <link rel="stylesheet" href="static/styles.css">
+    <link rel="shortcut icon" href="static/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="static/favicon.ico" type="image/x-icon">
     <meta name="viewport" content="width=device-width">
     <meta charset="utf-8">
     <script src="static/ui.js"></script>
