--- a/diaphragm/templates/layout.html
+++ b/diaphragm/templates/layout.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}niemandkun's&nbsp;lair{% endblock %}
+{% block title %}niemandkun's lair{% endblock %}
 
 {% block body %}
     <div class="container">
@@ -12,28 +12,27 @@
             </div>
 
             <div class="navigation navigation-closed">
-                <a onclick="ref('blog')">blog</a>
-                <a onclick="ref('projects')">projects</a>
-                <a onclick="ref('about')">about</a>
+                <a onclick="ref('/blog')">blog</a>
+                <a onclick="ref('/projects')">projects</a>
+                <a onclick="ref('/about')">about</a>
             </div>
         </div>
 
         <div class="cover cover-hidden" onclick="hideNavigation()"></div>
 
         <div class="content">
-            <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</div>
-            <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</div>
+            {% block content %}{% endblock %}
         </div>
 
         <div class="spinner">
             <div class="expand"></div>
-            <img src="static/ring.svg">
+            <img src="static/gears.svg">
             <div class="expand"></div>
         </div>
 
         <div class="footer">
             <p>Contact me via
-                <a href="mailto:niemandkun@yandex.ru">mail</a> or
+                <a href="mailto:niemandkun@yandex.ru">email</a> or
                 <a href="https://vk.com/niemandkun">vk</a>.
             </p>
         </div>
