--- a/diaphragm/static/styles.css
+++ b/diaphragm/static/styles.css
@@ -27,8 +27,19 @@ body {
 .container {
     margin: auto;
     display: flex;
+    display: -webkit-box;
+    display: -moz-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
     min-height: 100%;
     flex-direction: column;
+    -ms-flex-direction: column;
+    -moz-flex-direction: column;
+    -webkit-flex-direction: column;
+    flex-flow: column wrap;
+    -ms-flex-flow: column wrap;
+    -moz-flex-flow: column wrap;
+    -webkit-flex-flow: column wrap;
     background-color: #f5f5f5;
 }
 
@@ -55,9 +66,20 @@ body {
     z-index: 200;
     height: auto;
     display: flex;
+    display: -webkit-box;
+    display: -moz-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
     position: fixed;
     align-items: center;
     flex-direction: column;
+    -ms-flex-direction: column;
+    -moz-flex-direction: column;
+    -webkit-flex-direction: column;
+    flex-flow: column nowrap;
+    -ms-flex-flow: column nowrap;
+    -moz-flex-flow: column nowrap;
+    -webkit-flex-flow: column nowrap;
     justify-content: center;
 }
 
@@ -84,16 +106,31 @@ body {
 }
 
 .wrapper {
-    flex: 1;
+    flex: 1 1 auto;
+    -webkit-box-flex: 1;
+    -moz-box-flex: 1;
+    -webkit-flex: 1 1 auto;
+    -ms-flex: 1 1 auto;
     width: 100%;
     display: flex;
+    display: -webkit-box;
+    display: -moz-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
     z-index: 9000;
     flex-wrap: nowrap;
+    -ms-flex-wrap: nowrap;
+    -moz-flex-wrap: nowrap;
+    -webkit-flex-wrap: nowrap;
 }
 
 .title {
     padding: 0 1em;
-    flex: 1;
+    flex: 1 1 auto;
+    -webkit-box-flex: 1;
+    -moz-box-flex: 1;
+    -webkit-flex: 1 1 auto;
+    -ms-flex: 1 1 auto;
     height: 3em;
     line-height: 3em;
 }
@@ -121,15 +158,25 @@ body {
 }
 
 .content > .avatar {
-    flex: 1;
     text-align: center;
     display: none;
     flex-direction: column;
+    -ms-flex-direction: column;
+    -moz-flex-direction: column;
+    -webkit-flex-direction: column;
+    flex-flow: column nowrap;
+    -ms-flex-flow: column nowrap;
+    -moz-flex-flow: column nowrap;
+    -webkit-flex-flow: column nowrap;
     align-items: center;
 }
 
 .avatar img {
-    flex: 2;
+    flex: 2 0 auto;
+    /*-webkit-box-flex: 2;
+    -moz-box-flex: 2;
+    -webkit-flex: 2 0 auto;
+    -ms-flex: 2 0 auto;*/
     width: 15em;
     border-radius: 50%;
 }
@@ -143,19 +190,42 @@ body {
 }
 
 .content {
-    flex: 1;
+    flex: 1 1 auto;
+    -webkit-box-flex: 1;
+    -moz-box-flex: 1;
+    -webkit-flex: 1 1 auto;
+    -ms-flex: 1 1 auto;
     display: flex;
+    display: -webkit-box;
+    display: -moz-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
     margin-top: 3em;
     flex-wrap: wrap;
+    -ms-flex-wrap: wrap;
+    -moz-flex-wrap: wrap;
+    -webkit-flex-wrap: wrap;
     flex-direction: row;
+    -ms-flex-direction: row;
+    -moz-flex-direction: row;
+    -webkit-flex-direction: row;
+    flex-flow: row wrap;
+    -ms-flex-flow: row wrap;
+    -moz-flex-flow: row wrap;
+    -webkit-flex-flow: row wrap;
     align-content: flex-start;
     justify-content: center;
 }
 
 .content > div {
-    flex: 1;
+    flex: 1 1 auto;
+    -webkit-box-flex: 1;
+    -moz-box-flex: 1;
+    -webkit-flex: 1 1 auto;
+    -ms-flex: 1 1 auto;
     padding: 1em;
-    min-width: 300px;
+    /*min-width: 300px;*/
+    width: 100%;
     border-radius: 2px;
     margin: 0.3em 0em;
     background-color: white;
@@ -183,20 +253,43 @@ body {
 }
 
 .spinner {
-    flex: 1;
+    flex: 0 1 auto;
+    -webkit-box-flex: 0;
+    -moz-box-flex: 0;
+    -webkit-flex: 0 1 auto;
+    -ms-flex: 0 1 auto;
     background-color: transparent;
     display: none;
     align-items: center;
     flex-direction: column;
+    -ms-flex-direction: column;
+    -moz-flex-direction: column;
+    -webkit-flex-direction: column;
+    flex-flow: column wrap;
+    -ms-flex-flow: column wrap;
+    -moz-flex-flow: column wrap;
+    -webkit-flex-flow: column wrap;
+
 }
 
 .expand {
-    flex: 1;
+    flex: 1 1 auto;
+    -webkit-box-flex: 1;
+    -moz-box-flex: 1;
+    -webkit-flex: 1 1 auto;
+    -ms-flex: 1 1 auto;
 }
 
 @media screen and (min-width: 480px) {
     .header {
         flex-direction: row;
+        -ms-flex-direction: row;
+        -moz-flex-direction: row;
+        -webkit-flex-direction: row;
+        flex-flow: row wrap;
+        -ms-flex-flow: row wrap;
+        -moz-flex-flow: row wrap;
+        -webkit-flex-flow: row wrap;
         height: 3em;
         box-shadow: 0 1px 8px rgba(0,0,0,.4);
     }
@@ -208,6 +301,7 @@ body {
 
     .wrapper {
         box-shadow: none;
+        width: auto;
     }
 
     .menu {
@@ -261,10 +355,15 @@ body {
         background-color: white;
         padding: 0;
         margin: 1em;
+        width: 40%;
     }
 
     .content > .avatar {
         display: flex;
+        display: -webkit-box;
+        display: -moz-box;
+        display: -ms-flexbox;
+        display: -webkit-flex;
     }
 
     .footer {
