--- a/diaphragm/templates/base.html
+++ b/diaphragm/templates/base.html
@@ -10,8 +10,8 @@
     <link rel="icon" href="static/favicon.ico" type="image/x-icon">
     <meta name="viewport" content="width=device-width">
     <meta charset="utf-8">
-    <script src="static/ui.js"></script>
-    <script src="static/ajax.js"></script>
+    <script src="static/ui.js" type="text/javascript"></script>
+    <script src="static/ajax.js" type="text/javascript"></script>
     {% block head %}{% endblock %}
 </head>
 
