--- a/diaphragm/templates/about.html
+++ b/diaphragm/templates/about.html
@@ -27,7 +27,7 @@
 
 <div>
     <p>
-        I have an interests in a various fields, but the most passionate I am in:
+        I have interests in various fields, but the most passionate I am in:
         <ul>
             <li>Robotics</li>
             <li>Bioinformatics</li>
@@ -48,7 +48,7 @@
     </p>
 </div>
 
-<div style="min-width: 90%">
+<div style="width: 90%">
     <h2>Science</h2>
     <p>
         I've spent last summer as a volunteer worker in The Laboratory of
@@ -77,7 +77,7 @@
     </p>
 </div>
 
-<div style="min-width: 90%">
+<div style="width: 90%">
     <h2>Programming</h2>
     <p>
         After the first year of studying I've decided to participate with
@@ -87,10 +87,10 @@
     </p>
     <p>
         Our team was lucky enough to take the first place with the solution
-        that uses only some graph algorithms and a finite-state automaton.
+        that used only some graph algorithms and a finite-state automaton.
     </p>
     <p>
-        Now I'm taking a part in the development process of a new competitions,
+        Now I'm taking a part in the development of new competitions,
         which involves development and implementation of the contest's rules,
         development of the competitions Unity3D app and the infrastructure
         maintenance.
@@ -99,7 +99,7 @@
 
 <div>
     <p>
-        As a first years student I wrote a bunch of code on C#, Java and
+        As a first years student I wrote a bunch of code in C#, Java and
         Python.
 
         I'm still loving these programming languages and still using them in my
@@ -107,7 +107,7 @@
     </p>
     <p>
         Furthermore, I've became familiar with Prolog, Haskell and Scala
-        and fallen in love with the functional programming.
+        and have fallen in love with the functional programming.
         Now I'm solving
         <a href="http://rosalind.info/">Rosalind</a> problems
         using Haskell.
@@ -116,12 +116,12 @@
 
 <div>
     <p>
-        As a hobby I'm doing various gamedev, web or assembler stuff. Some of
+        As a hobby I'm doing various gamedev, web or assembly stuff. Some of
         that stuff is available on my <a onclick="ref('/projects')">projects</a>
         page.
     </p>
     <p>
-        Also, I have a
+        Besides this I like to play games and have a
         <a href="https://steamcommunity.com/profiles/76561198058887699">Steam</a>
         profile. So, if you'd like to play together, just let me know.
     </p>
@@ -136,8 +136,8 @@
     <p>
         This website is extremely lightweight.
         It was built from scratch with no JS and CSS frameworks.
-        Server is locating at my home on a
-        <a href="https://www.raspberrypi.org/">Raspberry Pi</a> microcomputer.
+        Server is located at my home on a
+        <a href="https://www.raspberrypi.org/">Raspberry Pi</a>.
     </p>
     <p>
         <a href="http://flask.pocoo.org/">Flask</a> is used to generate and send
