--- a/diaphragm/templates/about.html
+++ b/diaphragm/templates/about.html
@@ -81,7 +81,7 @@
     <h2>Programming</h2>
     <p>
         After the first year of studying I've decided to participate with
-        my mates in a local competitions on virtual robotics, where
+        my mates in local competitions on virtual robotics, where
         participants were asked to write a program for a fully
         autonomous robot acting in a virtual environment.
     </p>
@@ -90,7 +90,7 @@
         that used only some graph algorithms and a finite-state automaton.
     </p>
     <p>
-        Now I'm taking a part in the development of new competitions,
+        Now I'm taking part in the development of new competitions,
         which involves development and implementation of the contest's rules,
         development of the competitions Unity3D app and the infrastructure
         maintenance.
