--- a/diaphragm/static/styles.css
+++ b/diaphragm/static/styles.css
@@ -1,7 +1,3 @@
-* {
-    box-sizing: border-box;
-}
-
 html {
     width: 100%;
     height: 100%;
@@ -102,7 +98,7 @@ body {
 
 .header,
 .wrapper {
-    box-shadow: 0 1px 8px rgba(0,0,0,.2);
+    border-bottom: 2px solid lightgrey;
 }
 
 .wrapper {
@@ -142,7 +138,7 @@ body {
 }
 
 .navigation-closed {
-    margin-top: -3em;
+    margin-top: -3.1em;
 }
 
 .navigation-open {
@@ -200,7 +196,7 @@ body {
     display: -moz-box;
     display: -ms-flexbox;
     display: -webkit-flex;
-    margin-top: 3em;
+    margin-top: 3.2em;
     flex-wrap: wrap;
     -ms-flex-wrap: wrap;
     -moz-flex-wrap: wrap;
@@ -224,12 +220,11 @@ body {
     -webkit-flex: 1 1 auto;
     -ms-flex: 1 1 auto;
     padding: 1em;
-    /*min-width: 300px;*/
     width: 100%;
     border-radius: 2px;
     margin: 0.3em 0em;
     background-color: white;
-    box-shadow: 0 1px 8px rgba(0,0,0,.2);
+    border-bottom: 2px solid lightgrey;
 }
 
 .footer {
@@ -247,7 +242,7 @@ body {
 .content div.coming-soon {
     background-color: transparent;
     text-align: center;
-    box-shadow: none;
+    border: none;
     margin-top: 4em;
     color: grey;
 }
@@ -291,7 +286,6 @@ body {
         -moz-flex-flow: row wrap;
         -webkit-flex-flow: row wrap;
         height: 3em;
-        box-shadow: 0 1px 8px rgba(0,0,0,.4);
     }
 
     .cover-visible, .cover-hidden {
@@ -300,7 +294,7 @@ body {
     }
 
     .wrapper {
-        box-shadow: none;
+        border: none;
         width: auto;
     }
 
@@ -315,14 +309,6 @@ body {
     .navigation-closed {
         margin: 0px;
     }
-
-    .content {
-        margin-top: 3em;
-    }
-
-    .content > div {
-        margin: 0.5em 0.3em;
-    }
 }
 
 @media screen and (min-width: 800px) {
@@ -332,7 +318,6 @@ body {
     }
 
     .header {
-        box-shadow: none;
         position: relative;
         border-bottom: 1px solid lightgrey;
         background-color: transparent;
@@ -340,6 +325,7 @@ body {
 
     .navigation a {
         text-decoration: underline;
+        padding: 0 0 0 1em;
     }
 
     .navigation a:hover {
@@ -351,7 +337,7 @@ body {
     }
 
     .content > div {
-        box-shadow: none;
+        border: none;
         background-color: white;
         padding: 0;
         margin: 1em;
@@ -386,9 +372,5 @@ body {
 
     .title, .navigation {
         padding: 0;
-    }
-
-    .header, .footer {
-        padding: 0.5em 0;
     }
 }
