--- a/diaphragm/templates/about.html
+++ b/diaphragm/templates/about.html
@@ -9,7 +9,7 @@
 {% block content %}
 <div class="avatar">
     <div class="expand"></div>
-    <img src="static/avatar.jpg">
+    <img src="static/avatar.jpg" alt="me">
     <div class="expand"></div>
 </div>
 
@@ -17,12 +17,12 @@
     <h1>About me</h1>
 
     <p>
-        Hi! My name is <i><b>Ivan Poroshin</b></i> and I'm third year computer science bachelor
+        Hi, everyone! My name is <i>Ivan Poroshin</i> and I'm third year computer science bachelor
         student and enthusiastic programmer, interested in robotics,
         computer vision, bioinformatics and more.
     </p>
 
-    <p>Among the internets you can also find me by nickname <i><b>niemandkun</b></i>.</p>
+    <p>Among the internets you can also find me by nickname <i>niemandkun</i>.</p>
 </div>
 
 <div>
