--- a/diaphragm/templates/layout.html
+++ b/diaphragm/templates/layout.html
@@ -26,7 +26,7 @@
 
         <div class="spinner">
             <div class="expand"></div>
-            <img src="static/gears.svg">
+            <img src="static/gears.svg" alt="Loading...">
             <div class="expand"></div>
         </div>
 
