--- a/diaphragm/templates/base.html
+++ b/diaphragm/templates/base.html
@@ -5,11 +5,13 @@
 <head>
     <title>{% block title %}{% endblock %}</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=PT+Serif">
-    <link rel="stylesheet" href="static/styles.css">
+    <!--[if gt IE 9]><!--><link rel="stylesheet" href="static/styles.css"><!--<![endif]-->
+    <!--[if lt IE 10]><link rel="stylesheet" href="static/styles-legacy.css"><![endif]-->
     <link rel="shortcut icon" href="static/favicon.ico" type="image/x-icon">
     <link rel="icon" href="static/favicon.ico" type="image/x-icon">
     <meta name="viewport" content="width=device-width">
     <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <script src="static/ui.js" type="text/javascript"></script>
     <script src="static/ajax.js" type="text/javascript"></script>
     {% block head %}{% endblock %}
