--- a/diaphragm/static/styles.css
+++ b/diaphragm/static/styles.css
@@ -1,7 +1,7 @@
 html {
     width: 100%;
     height: 100%;
-    font-size: 1.2em;
+    font-size: 1em;
     font-family: 'PT Serif', serif;
 }
 
@@ -30,9 +30,10 @@ body {
     flex-direction: column;
     -ms-flex-direction: column;
     -webkit-flex-direction: column;
-    flex-flow: column wrap;
-    -ms-flex-flow: column wrap;
-    -webkit-flex-flow: column wrap;
+    flex-flow: column nowrap;
+    -ms-flex-flow: column nowrap;
+    -webkit-flex-flow: column nowrap;
+    flex-wrap: nowrap;
     background-color: #f5f5f5;
 }
 
@@ -128,7 +129,11 @@ body {
 }
 
 .navigation-closed {
-    margin-top: -3.1em;
+    margin-top: -3.5em;
+}
+
+.navigation-closed a {
+    visibility: hidden;
 }
 
 .navigation-open {
@@ -260,7 +265,6 @@ body {
         flex-flow: row wrap;
         -ms-flex-flow: row wrap;
         -webkit-flex-flow: row wrap;
-        height: 3em;
     }
 
     .cover-visible, .cover-hidden {
@@ -284,9 +288,17 @@ body {
     .navigation-closed {
         margin: 0px;
     }
+
+    .navigation-closed a {
+        visibility: visible;
+    }
 }
 
 @media screen and (min-width: 800px) {
+    html {
+        font-size: 1.2em;
+    }
+
     .container {
         width: 100%;
         background-color: white;
