better links onclick handling

--- a/diaphragm/templates/about.html
+++ b/diaphragm/templates/about.html
@@ -117,7 +117,7 @@
 <div>
     <p>
         As a hobby I'm doing various gamedev, web or assembly stuff. Some of
-        that stuff is available on my <a onclick="ref('/projects')">projects</a>
+        that stuff is available on my <a href="/projects">projects</a>
         page.
     </p>
     <p>
