--- a/diaphragm/templates/layout.html
+++ b/diaphragm/templates/layout.html
@@ -12,9 +12,9 @@
             </div>
 
             <div class="navigation navigation-closed">
-                <a onclick="ref('/blog')">blog</a>
-                <a onclick="ref('/projects')">projects</a>
-                <a onclick="ref('/about')">about</a>
+                <a href="/blog">blog</a>
+                <a href="/projects">projects</a>
+                <a href="/about">about</a>
             </div>
         </div>
 
