--- a/diaphragm/templates/about.html
+++ b/diaphragm/templates/about.html
@@ -7,13 +7,13 @@
 {% block title %}About me | nl{% endblock %}
 
 {% block content %}
-<div class="avatar">
+<div class="avatar twocolumns">
     <div class="expand"></div>
     <img src="static/avatar.jpg" alt="me">
     <div class="expand"></div>
 </div>
 
-<div>
+<div class="twocolumns">
     <h1>About me</h1>
 
     <p>
@@ -22,24 +22,10 @@
         computer vision, bioinformatics and more.
     </p>
 
-    <p>Among the internets you can also find me by nickname <i>niemandkun</i>.</p>
+    <p>Also, you can find me by my nickname <i>niemandkun</i>.</p>
 </div>
 
-<div>
-    <p>
-        I have interests in various fields, but the most passionate I am in:
-        <ul>
-            <li>Robotics</li>
-            <li>Bioinformatics</li>
-            <li>Computer vision</li>
-            <li>Machine learning</li>
-            <li>Gamedev and computer graphics</li>
-            <li>Functional programming</li>
-        </ul>
-    </p>
-</div>
-
-<div>
+<div class="onecolumn">
     <p>
         My current location is Yekaterinburg. Here I'm studying math and
         CS as a student of <a href="http://imkn.urfu.ru">The Institute of
@@ -48,7 +34,7 @@
     </p>
 </div>
 
-<div style="width: 90%">
+<div class="onecolumn">
     <h2>Science</h2>
     <p>
         I've spent last summer as a volunteer worker in The Laboratory of
@@ -77,7 +63,7 @@
     </p>
 </div>
 
-<div style="width: 90%">
+<div class="onecolumn">
     <h2>Programming</h2>
     <p>
         After the first year of studying I've decided to participate with
@@ -97,24 +83,23 @@
     </p>
 </div>
 
-<div>
+<div class="twocolumns">
+    <h2>Interests</h2>
     <p>
-        As a first years student I wrote a bunch of code in C#, Java and
-        Python.
-
-        I'm still loving these programming languages and still using them in my
-        daily work.
-    </p>
-    <p>
-        Furthermore, I've became familiar with Prolog, Haskell and Scala
-        and have fallen in love with the functional programming.
-        Now I'm solving
-        <a href="http://rosalind.info/">Rosalind</a> problems
-        using Haskell.
+        I have interests in various fields, but the most passionate I am in:
+        <ul>
+            <li>Robotics</li>
+            <li>Bioinformatics</li>
+            <li>Computer vision</li>
+            <li>Machine learning</li>
+            <li>Gamedev and computer graphics</li>
+            <li>Functional programming</li>
+        </ul>
     </p>
 </div>
 
-<div>
+<div class="twocolumns">
+    <h2>Hobbies</h2>
     <p>
         As a hobby I'm doing various gamedev, web or assembly stuff. Some of
         that stuff is available on my <a href="/projects">projects</a>
@@ -131,7 +116,7 @@
     </p>
 </div>
 
-<div>
+<div class="twocolumns">
     <h2>This Website</h2>
     <p>
         This website is extremely lightweight.
@@ -150,15 +135,17 @@
     </p>
 </div>
 
-<div>
+<div class="twocolumns">
     <h2>Contacts</h2>
 
-    <p>If you want to contact me, you can:</p>
+    <p>If you want to contact me, you may:</p>
 
     <ul>
         <li>Send me an <a href="mailto:niemandkun@yandex.ru">email</a></li>
         <li>Follow me on <a href="https://vk.com/niemandkun">VK</a></li>
         <li>Send me a message on <a href="https://github.com/niemandkun">GitHub</a></li>
     </ul>
+
+    <p>:)</p>
 </div>
 {% endblock %}
