--- a/diaphragm/templates/coming_soon.html
+++ b/diaphragm/templates/coming_soon.html
@@ -4,7 +4,7 @@
     {% extends "ajax.json" %}
 {% endif %}
 
-{% block title %}Coming soon | nl{% endblock %}
+{% block title %}Coming soon{% endblock %}
 
 {% block content %}
 <div class="coming-soon">
