--- a/diaphragm/templates/projects.html
+++ b/diaphragm/templates/projects.html
@@ -47,16 +47,16 @@
     <ul>
         <li>
             <a href="https://github.com/air-labs/uCvarc">uCvarc</a>
-            - a platform for creating online competitions of video game AI *+
+            - a platform to create online competitions for video game AI *+
         </li>
 
         <li>
             <a href="https://github.com/niemandkun/optical-flow">optical-flow</a>
-            - a game that uses webcam as a controller
+            - a game that uses webcam instead of controller
         </li>
         <li>
             <a href="https://github.com/niemandkun/mirai-engine">mirai-engine</a>
-            - 2D game engine on SFML
+            - 2D game engine written using SFML
         </li>
     </ul>
 </div>
