--- a/diaphragm/templates/projects.html
+++ b/diaphragm/templates/projects.html
@@ -10,11 +10,7 @@
 
 <div class="onecolumn">
     <h1>Projects</h1>
-    <p>Here you can read about the projects that I'm building or contributing in.</p>
-    <p>Most of these projects are just my attempts at writing.</p>
-    <p>With an asterisk (*) I've marked the projects that are used by somebody (the `adult` projects).
-    <br>With a plus (+) character I've marked the other people's projects
-    where I'm taking part in.</p>
+    <p>Here you can view the list of the projects that I'm building or contributing in.</p>
 </div>
 
 <div class="onecolumn">
@@ -22,7 +18,7 @@
     <ul>
         <li>
             <a href="https://github.com/niemandkun/plotextract">plotextract</a>
-            - a tool to extract plots from raster images *
+            - a tool to extract plots from raster images
         </li>
 
         <li>
@@ -47,7 +43,7 @@
     <ul>
         <li>
             <a href="https://github.com/air-labs/uCvarc">uCvarc</a>
-            - a platform to create online competitions for video game AI *+
+            - a platform to create online competitions for video game AI
         </li>
 
         <li>
@@ -80,7 +76,7 @@
     <ul>
         <li>
             <a href="https://github.com/niemandkun/diaphragm">diaphragm</a>
-            - this website *
+            - this website
         </li>
     </ul>
 </div>
