--- a/diaphragm/templates/projects.html
+++ b/diaphragm/templates/projects.html
@@ -10,7 +10,7 @@
 
 <div class="onecolumn">
     <h1>Projects</h1>
-    <p>Here you can view the list of the projects that I'm building or contributing in.</p>
+    <p>Here you can view the list of the projects that I'm building on my own or contributing in.</p>
 </div>
 
 <div class="onecolumn">
