--- a/diaphragm/templates/layout.html
+++ b/diaphragm/templates/layout.html
@@ -13,6 +13,7 @@
 
             <div class="navigation navigation-closed">
                 <a href="/blog">blog</a>
+                <a href="/gallery">gallery</a>
                 <a href="/projects">projects</a>
                 <a href="/about">about</a>
             </div>
