--- a/diaphragm/static/styles.css
+++ b/diaphragm/static/styles.css
@@ -21,6 +21,44 @@ body {
     height: 100%;
 }
 
+.show-image-wrapper {
+    background-image: url("gears.svg");
+    height: 10em;
+    background-repeat: no-repeat;
+    background-origin: border-box;
+    background-position: center;
+}
+
+.content > div.show-hidden {
+    display: none;
+}
+
+.content > div.show-visible {
+    z-index: 300;
+    display: flex;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
+    flex-direction: column;
+    -ms-flex-direction: column;
+    -webkit-flex-direction: column;
+    flex-flow: column nowrap;
+    -ms-flex-flow: column nowrap;
+    -webkit-flex-flow: column nowrap;
+    flex-wrap: nowrap;
+}
+
+.content > div.show {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(100, 100, 100, 0.8);
+    margin: 0px;
+    text-align: center;
+}
+
 .container {
     margin: auto;
     display: flex;
@@ -171,6 +209,16 @@ body {
     border-radius: 50%;
 }
 
+.thumbnail {
+    text-align: center;
+    margin: auto;
+    width: inherit;
+}
+
+.thumbnail img {
+    width: inherit;
+}
+
 .menu,
 .cover,
 .header,
@@ -214,11 +262,10 @@ body {
     border-bottom: 2px solid lightgrey;
 }
 
-.onecolumn {
-    width: 100%;
-}
-
-.twocolumns {
+.onecolumn,
+.twocolumns,
+.threecolumns,
+.fourcolumns {
     width: 100%;
 }
 
@@ -301,6 +348,14 @@ body {
     .navigation-closed a {
         visibility: visible;
     }
+
+    .thumbnail {
+        width: 12em;
+        padding: 1em;
+        margin-top: 1em;
+        box-shadow: 2px 2px 10px lightgrey;
+        border: 1px solid lightgrey;
+    }
 }
 
 @media screen and (min-width: 480px) {
@@ -348,6 +403,14 @@ body {
     .footer {
         text-align: right;
     }
+
+    .threecolumns {
+        width: 40%;
+    }
+
+    .fourcolumns {
+        width: 40%;
+    }
 }
 
 @media screen and (min-width: 800px) {
@@ -361,6 +424,14 @@ body {
 
     .twocolumns {
         width: 40%;
+    }
+
+    .threecolumns {
+        width: 25%;
+    }
+
+    .fourcolumns {
+        width: 20%;
     }
 
     .content {
