--- a/diaphragm/templates/base.html
+++ b/diaphragm/templates/base.html
@@ -14,6 +14,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <script src="static/ui.js" type="text/javascript"></script>
     <script src="static/ajax.js" type="text/javascript"></script>
+    <script src="static/gallery.js" type="text/javascript"></script>
     {% block head %}{% endblock %}
 </head>
 
