--- a/diaphragm/templates/layout.html
+++ b/diaphragm/templates/layout.html
@@ -27,7 +27,7 @@
 
         <div class="spinner">
             <div class="expand"></div>
-            <img src="static/gears.svg" alt="Loading...">
+            <img src="{{ url_for('static', filename='gears.svg') }}" alt="Loading...">
             <div class="expand"></div>
         </div>
 
