--- a/diaphragm/templates/base.html
+++ b/diaphragm/templates/base.html
@@ -5,16 +5,16 @@
 <head>
     <title>{% block title %}{% endblock %}</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=PT+Serif">
-    <!--[if gt IE 9]><!--><link rel="stylesheet" href="static/styles.css"><!--<![endif]-->
+    <!--[if gt IE 9]><!--><link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}"><!--<![endif]-->
     <!--[if lt IE 10]><link rel="stylesheet" href="static/styles-legacy.css"><![endif]-->
-    <link rel="shortcut icon" href="static/favicon.ico" type="image/x-icon">
-    <link rel="icon" href="static/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}" type="image/x-icon">
+    <link rel="icon" href="{{ url_for('static', filename='favicon.ico') }}" type="image/x-icon">
     <meta name="viewport" content="width=device-width">
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <script src="static/ui.js" type="text/javascript"></script>
-    <script src="static/ajax.js" type="text/javascript"></script>
-    <script src="static/gallery.js" type="text/javascript"></script>
+    <script src="{{ url_for('static', filename='ui.js') }}" type="text/javascript"></script>
+    <script src="{{ url_for('static', filename='ajax.js') }}" type="text/javascript"></script>
+    <script src="{{ url_for('static', filename='gallery.js') }}" type="text/javascript"></script>
     {% block head %}{% endblock %}
 </head>
 
