--- a/diaphragm/templates/gallery.html
+++ b/diaphragm/templates/gallery.html
@@ -35,8 +35,8 @@
             <h4>Help</h4>
             <ul>
                 <li><b>F1</b> - help</li>
-                <li><b>Left arrow</b> - previous</li>
-                <li><b>Right arrow</b> - next</li>
+                <li><b>Left arrow</b> or <b>a</b> - previous</li>
+                <li><b>Right arrow</b> or <b>d</b> - next</li>
                 <li><b>Escape</b> - close gallery</li>
             </ul>
         </div>
