FIX: script execution order: join all scripts into single file

--- a/diaphragm/templates/gallery.html
+++ b/diaphragm/templates/gallery.html
@@ -37,7 +37,7 @@
                 <li><b>F1</b> - help</li>
                 <li><b>Left arrow</b> or <b>a</b> - previous</li>
                 <li><b>Right arrow</b> or <b>d</b> - next</li>
-                <li><b>Escape</b> - close gallery</li>
+                <li><b>Escape</b> - close</li>
             </ul>
         </div>
         {% if full_size %}
