--- a/diaphragm/templates/base.html
+++ b/diaphragm/templates/base.html
@@ -12,9 +12,7 @@
     <meta name="viewport" content="width=device-width">
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <script src="{{ url_for('static', filename='ui.js') }}" type="text/javascript"></script>
-    <script src="{{ url_for('static', filename='ajax.js') }}" type="text/javascript"></script>
-    <script src="{{ url_for('static', filename='gallery.js') }}" type="text/javascript"></script>
+    <script src="{{ url_for('static', filename='script.js') }}" type="text/javascript"></script>
     {% block head %}{% endblock %}
 </head>
 
