--- a/diaphragm/templates/layout.html
+++ b/diaphragm/templates/layout.html
@@ -16,6 +16,7 @@
                 <a href="/gallery">gallery</a>
                 <a href="/projects">projects</a>
                 <a href="/about">about</a>
+                <a href="/board">/nl/</a>
             </div>
         </div>
 
