--- a/diaphragm/root/templates/coming_soon.html
+++ b/diaphragm/root/templates/coming_soon.html
@@ -8,6 +8,8 @@
 
 {% block content %}
 <div class="coming-soon">
-    Coming soon...
+    <div class="expand"></div>
+    <div>Coming-soon...</div>
+    <div class="expand"></div>
 </div>
 {% endblock %}
