--- a/diaphragm/root/templates/welcome.html
+++ b/diaphragm/root/templates/welcome.html
@@ -8,6 +8,8 @@
 
 {% block content %}
 <div class="welcome">
-    Welcome to niemandkun's&nbsp;lair
+    <div class="expand"></div>
+    <div>Welcome to niemandkun's&nbsp;lair</div>
+    <div class="expand"></div>
 </div>
 {% endblock %}
