--- a/diaphragm/root/templates/layout.html
+++ b/diaphragm/root/templates/layout.html
@@ -28,7 +28,7 @@
 
         <div class="spinner">
             <div class="expand"></div>
-            <img src="{{ url_for('static', filename='gears.svg') }}" alt="Loading...">
+            <img src="{{ url_for('.static', filename='gears.svg') }}" alt="Loading...">
             <div class="expand"></div>
         </div>
 
