--- a/diaphragm/board/templates/board.html
+++ b/diaphragm/board/templates/board.html
@@ -1,14 +1,11 @@
-{% if not standalone %}
-    {% extends "layout.html" %}
-{% else %}
-    {% extends "ajax.json" %}
-{% endif %}
+
+{% extends "preview.html" %}
 
 {% block title %}/nl/{% endblock %}
 
-{% block content %}
+{% block content_actual %}
 
-{% for thread, op, last_n in threads %}
+{% for thread, op in threads %}
 <div class="onecolumn thread">
     <div class="post-header">
         <p class="thread-reply">[<a href="board/thread/{{ thread.id }}">Reply</a>]</p>
@@ -23,25 +20,7 @@
          alt="{{ op.attachment }}"
          onclick="showImage(event);">
     {% endif %}
-    <div class="post-content">{{ op.message }}</div>
-
-    {% for post in posts %}
-    <div class="onecolumn post">
-        <div class="post-header">
-            <p class="post-author">{{ post.author }}</p>
-            <p class="post-id">No.{{ post.id }}</p>
-            <p class="post-time">{{ post.time.strftime('%Y/%m/%d %H:%M:%S') }}</p>
-        </div>
-        {% if post.attachment %}
-        <img class="post-attachment preview"
-             src="{{ url_for('.static', filename=thumbnail(post.attachment)) }}"
-             alt="{{ post.attachment }}"
-             onclick="showImage(event);">
-        {% endif %}
-        <div class="post-content">{{ post.message }}</div>
-    </div>
-    {% endfor %}
-
+    <div class="post-content">{{ op.message.replace('\n', '<br/>')|clean }}</div>
 </div>
 
 {% endfor %}
@@ -59,27 +38,6 @@
         <input class="submit" type="submit"
             value="Start" onclick="startThread(event);">
     </form>
-</div>
-
-{% if full_size %}
-<div class="show show-visible" onclick="hideImage(event);">
-{% else %}
-<div class="show show-hidden" onclick="hideImage(event);">
-{% endif %}
-    <div class="popup">
-        <div class="help help-hidden">
-            <h4>Help</h4>
-            <ul>
-                <li><b>F1</b> - help</li>
-                <li><b>Left arrow</b> or <b>a</b> - previous</li>
-                <li><b>Right arrow</b> or <b>d</b> - next</li>
-                <li><b>Escape</b> - close</li>
-            </ul>
-        </div>
-        {% if full_size %}
-        <img class="image-full" src="{{ url_for('.static', filename=full_size) }}">
-        {% endif %}
-    </div>
 </div>
 
 {% endblock %}
