--- a/diaphragm/gallery/templates/gallery.html
+++ b/diaphragm/gallery/templates/gallery.html
@@ -1,12 +1,8 @@
-{% if not standalone %}
-    {% extends "layout.html" %}
-{% else %}
-    {% extends "ajax.json" %}
-{% endif %}
+{% extends "preview.html" %}
 
 {% block title %}Gallery{% endblock %}
 
-{% block content %}
+{% block content_actual %}
 <div class="onecolumn">
     <h1>Gallery</h1>
     <p>
@@ -26,26 +22,5 @@
         </div>
 </div>
 {% endfor %}
-
-{% if full_size %}
-<div class="show show-visible" onclick="hideImage(event);">
-{% else %}
-<div class="show show-hidden" onclick="hideImage(event);">
-{% endif %}
-    <div class="popup">
-        <div class="help help-hidden">
-            <h4>Help</h4>
-            <ul>
-                <li><b>F1</b> - help</li>
-                <li><b>Left arrow</b> or <b>a</b> - previous</li>
-                <li><b>Right arrow</b> or <b>d</b> - next</li>
-                <li><b>Escape</b> - close</li>
-            </ul>
-        </div>
-        {% if full_size %}
-        <img class="image-full" src="{{ url_for('.static', filename=full_size) }}">
-        {% endif %}
-    </div>
-</div>
 
 {% endblock %}
