--- a/diaphragm/root/templates/layout.html
+++ b/diaphragm/root/templates/layout.html
@@ -32,7 +32,10 @@
         </div>
 
         <div class="footer">
-            <p>Contact me via
+            <p>
+                Site <a href="/counter">status</a>.
+                <br/>
+                Contact me via
                 <a href="mailto:niemandkun@yandex.ru">email</a> or
                 <a href="https://vk.com/niemandkun">vk</a>.
             </p>
