show message about hidden replies

--- a/diaphragm/board/templates/board.html
+++ b/diaphragm/board/templates/board.html
@@ -5,7 +5,7 @@
 
 {% block content_actual %}
 
-{% for thread, op in threads %}
+{% for thread, op, count in threads %}
 <div class="onecolumn thread">
     <div class="post-header">
         <p class="thread-reply">[<a href="board/thread/{{ thread.id }}">Reply</a>]</p>
@@ -21,6 +21,12 @@
          onclick="showImage(event);">
     {% endif %}
     <div class="post-content">{{ op.message.replace('\n', '<br/>')|clean }}</div>
+    {% if count > 1 %}
+    <div class="thread-hidden">
+        {{ count - 1 }} {{ pluralize("reply", count-1) }} are hidden.
+        <a href="board/thread/{{ thread.id }}">Click here</a> to view.
+    </div>
+    {% endif %}
 </div>
 
 {% endfor %}
