--- a/diaphragm/root/static/styles.css
+++ b/diaphragm/root/static/styles.css
@@ -42,6 +42,10 @@ body {
     top: 0;
 }
 
+.paginator-current {
+    font-weight: bold;
+}
+
 .content > div.show-visible {
     display: flex;
     display: -webkit-box;
